--- a/Session 5/EVA4_S5_F5.ipynb
+++ b/Session 5/EVA4_S5_F5.ipynb
@@ -1517,7 +1517,7 @@
         "            nn.BatchNorm2d(10),\n",
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
-        "        ) # output_size = 26, \n",
+        "        ) # output_size = 26, RF = 3\n",
         "\n",
         "        # CONVOLUTION BLOCK 1\n",
         "        self.convblock2 = nn.Sequential(\n",
@@ -1526,13 +1526,14 @@
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
         "            # nn.Dropout(dropout_value)\n",
-        "        ) # output_size = 24\n",
+        "        ) # output_size = 24, RF = 5\n",
         "\n",
         "        # TRANSITION BLOCK 1\n",
-        "        self.pool1 = nn.MaxPool2d(2, 2) # output_size = 11\n",
+        "        self.pool1 = nn.MaxPool2d(2, 2) \n",
+        "        # output_size = 11, RF = 6\n",
         "        self.convblock3 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels=20, out_channels=10, kernel_size=(1, 1), padding=0, bias=False),\n",
-        "        ) # output_size = 11\n",
+        "        ) # output_size = 12, RF = 6\n",
         "\n",
         "        self.convblock4 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels=10, out_channels=12, kernel_size=(3, 3), padding=0, bias=False),\n",
@@ -1540,7 +1541,7 @@
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
         "            # nn.Dropout(dropout_value)\n",
-        "        ) # output_size = 22\n",
+        "        ) # output_size = 10, RF = 10\n",
         "\n",
         "        # CONVOLUTION BLOCK 2\n",
         "        self.convblock5 = nn.Sequential(\n",
@@ -1549,14 +1550,14 @@
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
         "            # nn.Dropout(dropout_value)\n",
-        "        ) # output_size = 9\n",
+        "        ) # output_size = 10, RF = 14\n",
         "        self.convblock6 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels=16, out_channels=16, kernel_size=(3, 3), padding=1,bias=False),\n",
         "            nn.BatchNorm2d(16),\n",
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
         "            # nn.Dropout(dropout_value)\n",
-        "        ) # output_size = 7\n",
+        "        ) # output_size = 10, RF = 16\n",
         "\n",
         "        # OUTPUT BLOCK\n",
         "        self.convblock7 = nn.Sequential(\n",
@@ -1565,15 +1566,15 @@
         "            nn.Dropout(dropout_value),\n",
         "            nn.ReLU(),\n",
         "            # nn.Dropout(dropout_value)\n",
-        "        ) # output_size = 7\n",
+        "        ) # output_size = 10, RF = 18\n",
         "        self.gap = nn.Sequential(\n",
         "            nn.AvgPool2d(kernel_size=3)\n",
-        "        ) # output_size = 1\n",
+        "        ) # output_size = 10, RF = 22\n",
         "\n",
         "        self.convblock8 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels=10, out_channels=10, kernel_size=(3, 3), padding=0, bias=False),\n",
         "            # nn.ReLU() NEVER!\n",
-        "        ) # output_size = 1\n",
+        "        ) # output_size = 1, RF = 34\n",
         "\n",
         "\n",
         "    def forward(self, x):\n",
