--- a/Session 5/EVA4_S5_F1.ipynb
+++ b/Session 5/EVA4_S5_F1.ipynb
@@ -1050,7 +1050,7 @@
         "5. Any kind of regularization can be helpful to us in this scenario  \n",
         "6. Personally, I would be happy of i do not see any kinks in the Test accuracy graph - that is no hiccups in the graph  \n",
         "7. But, the number of params in the network had to be reduced first  \n",
-        "8. Since the Test accuracy is not trailing much behing the Train Accuracy, we might say that it is not overfitting by large  \n"
+        "8. Since the Train accuracy is a little better than the Test Accuracy, we might say that it is not overfitting at all and in fact can be pushed further with more epochs for better performace.  \n"
       ]
     },
     {
@@ -1218,7 +1218,7 @@
         "train = datasets.MNIST('./data', train=True, download=True, transform=train_transforms)\n",
         "test = datasets.MNIST('./data', train=False, download=True, transform=test_transforms)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1370,7 +1370,7 @@
         "# test dataloader\n",
         "test_loader = torch.utils.data.DataLoader(test, **dataloader_args)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,7 +1432,7 @@
         "print(' - std:', torch.std(train.train_data.type(torch.float32)))\n",
         "print(' - var:', torch.var(train.train_data.type(torch.float32)))\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1504,7 +1504,7 @@
         "    plt.axis('off')\n",
         "    plt.imshow(images[index].numpy().squeeze(), cmap='gray_r')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1592,7 @@
         "print(' - var:', torch.var(exp_data))\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1734,7 +1734,7 @@
         "model = Net().to(device)\n",
         "summary(model, input_size=(1, 28, 28))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1805,7 +1805,7 @@
       "source": [
         "print(torch.__version__)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1919,7 +1919,7 @@
         "    train(model, device, train_loader, optimizer, epoch)\n",
         "    test(model, device, test_loader)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,11 +2210,11 @@
       "metadata": {
         "id": "87RaqGSEOWDe",
         "colab_type": "code",
+        "outputId": "c15abeb2-0b5e-4eea-9f3a-9f62a0f1e06c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
-        },
-        "outputId": "c15abeb2-0b5e-4eea-9f3a-9f62a0f1e06c"
+        }
       },
       "source": [
         "fig, axs = plt.subplots(2,2,figsize=(15,10))\n",
@@ -2227,7 +2227,7 @@
         "axs[1, 1].plot(test_acc)\n",
         "axs[1, 1].set_title(\"Test Accuracy\")"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
